# supertropicalpy

./: AUDIT_REPORT.md  IMPLEMENTATION_SUMMARY.md  PANDUAN_CEPAT.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: docs.yml  publish-to-pypi.yml
docs/: index.rst
docs/source/: advanced.rst  conf.py  getting_started.rst  index.rst  theory.rst
docs/source/_static/: custom.css
docs/source/api/: index.rst
docs/source/examples/: 01_supertropical_elements.ipynb  02_ghost_surpasses.ipynb  03_matrices.ipynb  04_linear_systems.ipynb  requirements.txt  tutorial.ipynb
src/supertropical/: matrix.py
tests/: __init__.py  test_matrix.py
