[build-system]
# Specifies that setuptools is the build backend
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supertropical-algebra"
version = "0.1.1"
authors = [
    {name = "Teosofi Hidayah Agung", email = "teosofihidayahagung@gmail.com"}
]
description = "A Python package for supertropical algebra with tangible and ghost elements"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
]
license = {text = "MIT License"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme",
    "nbsphinx",
    "myst-parser",
    "ipython",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/TetewHeroez/supertropical-algebra"
Documentation = "https://tetewhereoez.github.io/supertropical-algebra"
Repository = "https://github.com/TetewHeroez/supertropical-algebra"

# Setuptools-specific configuration
[tool.setuptools.packages.find]
# Points to 'src' as the root of the package code
where = ["src"]